# RAG-new

./: .env  .gitignore  README.md  pyproject.toml  report.md
db/: chroma.sqlite3
src/rag/: crew.py  main.py
src/rag/config/: tasks.yaml
src/rag/tools/: __init__.py  custom_tool.py
